--- a/styles.css
+++ b/styles.css
@@ -83,6 +83,15 @@ img {
 }
 
 .site-nav ul {
+    display: flex;
+    gap: 1.5rem;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    align-items: center;
+}
+
+.site-nav ul {
     position: absolute;
     left: 0;
     top: calc(100% + 12px);
